--- a/src/main/resources/templates/fragment/update-modal.html
+++ b/src/main/resources/templates/fragment/update-modal.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<th:block th:fragment="startUpdateToggle(updateStartForm)">
+<th:block th:fragment="startUpdateToggle(updateStartForm, isCreateRoute)">
     <!-- Modal toggle -->
     <button class="input text-center text-label max-w-md w-4/5 h-10 sm:h-12 flex justify-between items-center"
             data-modal-target="startUpdateModal" data-modal-toggle="startUpdateModal" id="startUpdateToggle" type="button">
@@ -14,6 +14,16 @@
         <span class="flex-1 text-base sm:text-xl truncate ... px-2" th:text="${updateStartForm.name}">出発地点を入力する</span>
         <span></span>
     </button>
+    <div class="flex justify-center" th:classappend="${isCreateRoute ? '' : 'hidden'}" id="startTransitionData">
+        <span class="inline-flex justify-between items-center space-x-4 w-48">
+            <th:block th:if="${updateStartForm.toTransportation.name() == 'Driving'}" th:insert="~{fragment/svg :: car}"/>
+            <th:block th:if="${updateStartForm.toTransportation.name() == 'Bicycling'}" th:insert="~{fragment/svg :: cycle}"/>
+            <th:block th:if="${updateStartForm.toTransportation.name() == 'Transit'}" th:insert="~{fragment/svg :: train}"/>
+            <th:block th:if="${updateStartForm.toTransportation.name() == 'Walking'}" th:insert="~{fragment/svg :: walk}"/>
+            <span th:text="${updateStartForm.toTravelTime}"></span>
+        </span>
+        <!-- todo: 移動手段の変更 selectedにしてもいいかも -->
+    </div>
 </th:block>
 
 <th:block th:fragment="startUpdateForm(updateStartForm)">
@@ -137,7 +147,7 @@
     </div>
 </th:block>
 
-<th:block th:fragment="placesUpdateToggle(num, updatePlaceForm)">
+<th:block th:fragment="placesUpdateToggle(num, updatePlaceForm, isCreateRoute)">
     <div class="flex items-center">
         <!-- Modal toggle -->
         <button class="input text-center text-label max-w-md w-4/5 flex justify-between items-center h-10 sm:h-12"
@@ -153,6 +163,17 @@
         <button class="px-2" th:id="'modalDeleteBtn' + ${num}">
             <th:block th:replace="~{fragment/svg :: close}"/>
         </button>
+    </div>
+    <!-- 経路生成後に表示 -->
+    <div class="flex justify-center" th:classappend="${isCreateRoute ? '' : 'hidden'}" th:id="${'placeTransitionData' + num}">
+        <span class="inline-flex justify-between items-center space-x-4 w-48">
+            <th:block th:if="${updatePlaceForm.toTransportation.name() == 'Driving'}" th:insert="~{fragment/svg :: car}"/>
+            <th:block th:if="${updatePlaceForm.toTransportation.name() == 'Bicycling'}" th:insert="~{fragment/svg :: cycle}"/>
+            <th:block th:if="${updatePlaceForm.toTransportation.name() == 'Transit'}" th:insert="~{fragment/svg :: train}"/>
+            <th:block th:if="${updatePlaceForm.toTransportation.name() == 'Walking'}" th:insert="~{fragment/svg :: walk}"/>
+            <span th:text="${updatePlaceForm.toTravelTime}"></span>
+        </span>
+        <!-- todo: 移動手段の変更 selectedにしてもいいかも -->
     </div>
 </th:block>
 
